<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.fedchanka.missyou.ui.login.LoginViewModel" />

        <import type="android.view.View" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.signUp()}"
                android:padding="4dp"
                android:text="@string/sign_up"
                android:textColor="#000000"
                android:textIsSelectable="true"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

            <include
                android:id="@+id/frameLayout"
                layout="@layout/driver"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginBottom="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

            </include>

            <TextView
                android:id="@+id/text_log_in_title"
                style="@style/LoginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="40dp"
                android:background="@{viewModel.loginWithMailInProgress ? @drawable/login_button_pressed : @drawable/login_button_background}"
                android:clickable="@{!viewModel.loginWithMailInProgress}"
                android:enabled="@{viewModel.email.trim().length() != 0 &amp;&amp; viewModel.password.trim().length() != 0}"
                android:onClick="@{() -> viewModel.loginWithEmail()}"
                android:text="@{viewModel.loginWithMailInProgress ? `` : @string/log_in}"
                android:textIsSelectable="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password"
                tools:background="@drawable/login_button_background"
                tools:enabled="true"
                tools:text="@string/log_in" />

            <EditText
                android:id="@+id/email"
                style="@style/LoginEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textPersonName|textEmailAddress"
                android:text="@={viewModel.email}"
                app:layout_constraintBottom_toTopOf="@+id/password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/password"
                style="@style/LoginEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/login_edittext"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={viewModel.password}"
                app:layout_constraintBottom_toTopOf="@+id/frameLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/facebook_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/ic_facebook_logo"
                android:drawablePadding="4dp"
                android:onClick="@{() -> viewModel.loginWithFacebook()}"
                android:text="@string/log_in_with_facebook"
                android:textColor="	#4267B2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/or"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_log_in_title" />

            <include
                layout="@layout/driver"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="40dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/textView3">

            </include>

            <include
                layout="@layout/driver"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintEnd_toStartOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView3">

            </include>

            <TextView
                android:id="@+id/google_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:drawableStart="@drawable/ic_google_logo"
                android:drawablePadding="4dp"
                android:onClick="@{() -> viewModel.loginWithGoogle()}"
                android:text="@string/log_in_with_google"
                app:layout_constraintBottom_toTopOf="@+id/frameLayout"
                app:layout_constraintStart_toStartOf="@+id/facebook_login"
                app:layout_constraintTop_toBottomOf="@+id/facebook_login"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>